rename to password-manager.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MyPasswords.js</title>
+    <title>Password Manager</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <script src="js/openpgp.js"></script>
 </head>
@@ -19,6 +19,6 @@
         <button onclick="encryptClearText()" id="btn-decrypt">Encrypt & download</button>
     </div>
 </body>
-<script src="js/mypasswords.js"></script>
+<script src="js/password-manager.js"></script>
 
 </html>
