--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Password Manager</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <script src="js/openpgp.js"></script>
@@ -11,11 +12,15 @@
 <body>
     <div>
         <input type="file" id="in-ciphertext" accept=".pgp.asc" onchange="readArmoredMessage()" autocomplete="off" />
+    </div>
+    <div>
         <input type="password" id="in-password" placeholder="Enter Password" />
         <button onclick="decryptArmoredMessage()" id="btn-decrypt">Decrypt</button>
     </div>
     <div>
         <textarea id="in-cleartext" placeholder="Decrypted Text" autocomplete="off"></textarea>
+    </div>
+    <div>
         <button onclick="encryptClearText()" id="btn-decrypt">Encrypt & download</button>
     </div>
 </body>
