--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 
 <body>
     <div>
-        <input type="file" id="in-ciphertext" accept=".pgp.asc" onchange="readArmoredMessage()" autocomplete="off" />
+        <input type="file" id="in-ciphertext" accept=".pgp.asc" onchange="readArmoredMessage()" spellcheck="false"
+            autocomplete="off" autocorrect="off" autocapitalize="off" />
     </div>
     <div>
-        <input type="password" id="in-password" placeholder="Enter Password" />
+        <input type="password" id="in-password" placeholder="Enter Password" spellcheck="false" autocomplete="off"
+            autocorrect="off" autocapitalize="off" />
         <button onclick="decryptArmoredMessage()" id="btn-decrypt">Decrypt</button>
     </div>
     <div>
-        <textarea id="in-cleartext" placeholder="Decrypted Text" autocomplete="off"></textarea>
+        <textarea id="in-cleartext" placeholder="Decrypted Text" spellcheck="false" autocomplete="off" autocorrect="off"
+            autocapitalize="off"></textarea>
     </div>
     <div>
         <button onclick="encryptClearText()" id="btn-decrypt">Encrypt & download</button>
